--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     // Need scala-xml at test runtime
     testRuntime 'org.scala-lang.modules:scala-xml_2.11:1.0.6'
+    compile 'org.scalaz:scalaz-core_2.10:7.1.0-M3'
 }
 
 jar {
